Fix drop-down caret wrapping from main button.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.btn-group { width: 8em; }
+
+.btn + .btn-group { margin-top: 0.5em; }
+
 html, body {
   height:100%;
   margin:0;
